# p4runtime

./: .bazelignore  .bazelrc  .bazelversion.license  .gitignore  .travis.yml  BAZEL_NOTES.md  BUILD  BUILD.bazel  CONTRIBUTING.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  go.mod  go.sum  grpc_bazel_9.patch  index.md  p4runtime_deps.bzl  setup.py
.github/: dependabot.yml  labeler.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: any-branch-uploads.yml  bazel-build.yml  ci-build-proto.yml  ci-build-with-bazel.yml  codegen.yml  google-rpc-status-synced.yml  main-branch-uploads.yml  monthly-release.yml  publish-release.yml  rust-build.yml  spec.yml  tag-uploads.yml
CI/: check_codegen.sh  check_go.sh  check_py.sh  deploy.sh  deploy_pypi.sh
bazel/: deps.bzl  rules.bzl  workspace_rule.bzl
bazel/example/: .bazelrc  BUILD.bazel  WORKSPACE.bazel
bazel/example/using-bzlmod/: .bazelrc  BUILD.bazel  MODULE.bazel  MODULE.bazel.license  hello_p4runtime.cc
bazel/example/using-workspace/: .bazelrc  BUILD.bazel  WORKSPACE.bazel  hello_p4runtime.cc
codegen/: Dockerfile  compile_protos.sh  update.sh  update_go.sh  update_py.sh
docs/: README.md  libre-office.png.license
docs/tools/: Dockerfile.asciidoc  Makefile  README.md
docs/v1/: GenericTable.md  Makefile  P4Runtime-Spec.adoc  P4Runtime-Spec.mdk  P4Runtime-spec.adoc  README.md  guidance-for-generating-p4info.md  p4.json  p4runtime-id-notes.md  references.bib
docs/v1/assets/: embedded-plus-two-remote-ha-controllers.odg  error-report.odg  p4runtime.odg
docs/v1/resources/figs/: .gitignore  error-report.odg.license  psa-metadata-translation.odg  reference-architecture.odg
docs/v1/resources/theme/: logo.png.license  p4-stylesheet.css  p4-theme.yml  references.bib
go/p4/config/v1/: p4info.pb.go  p4types.pb.go
go/p4/v1/: p4data.pb.go  p4runtime.pb.go  p4runtime_grpc.pb.go
proto/: .bazelrc  BUILD.bazel  BUILD.bazel.license  MODULE.bazel  README.md  WORKSPACE.bazel  p4runtime_deps.bzl  update_google_rpc_status.sh
proto/google/rpc/: status.proto.license
proto/p4/: GenericTable.md
proto/p4/config/v1/: BUILD.bazel  p4info.proto  p4types.proto
proto/p4/v1/: BUILD.bazel  BUILD.bazel.license  p4data.proto  p4runtime.proto
py/: REUSE.toml  pyproject.toml  setup.cfg  setup.py
py/p4/config/v1/: p4info_pb2.py  p4types_pb2.py
py/p4/v1/: p4data_pb2.py  p4runtime_pb2.py  p4runtime_pb2_grpc.py
rust/: Cargo.lock.license  Cargo.toml  README.md
rust/p4runtime-prost/: Cargo.toml  build.rs
rust/p4runtime-prost/src/: lib.rs
rust/p4runtime-tonic/: Cargo.toml  build.rs
rust/p4runtime-tonic/src/: lib.rs
rust/src/: google.rpc.rs  google.rpc.serde.rs  lib.rs  p4.config.v1.rs  p4.config.v1.serde.rs  p4.v1.rs  p4.v1.serde.rs  p4.v1.tonic.rs
spec/main/: P4Runtime-Spec-bib.aux  P4Runtime-Spec-bib.bbl.mdk  P4Runtime-Spec-bib.bib.json  P4Runtime-Spec-bib.final.aux  P4Runtime-Spec-math-full.final.tex  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec-math-plain.final.tex  P4Runtime-Spec.aux  P4Runtime-Spec.html  P4Runtime-Spec.tex  references.bib
spec/master/: P4Runtime-Spec-bib.aux  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec.html  P4Runtime-Spec.tex  index.html
spec/v1.0.0/: P4Runtime-Spec-bib.bbl.mdk  P4Runtime-Spec-bib.bib.json  P4Runtime-Spec-bib.final.aux  P4Runtime-Spec-math-full.final.tex  P4Runtime-Spec-math-plain.dim  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec-math-plain.final.tex  P4Runtime-Spec.aux  P4Runtime-Spec.dimx  P4Runtime-Spec.html  P4Runtime-Spec.tex
spec/v1.1.0/: P4Runtime-Spec-bib.bib.json  P4Runtime-Spec-bib.final.aux  P4Runtime-Spec-math-plain.dim  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec-math-plain.final.tex  P4Runtime-Spec.aux  P4Runtime-Spec.html  P4Runtime-Spec.tex  references.bib
spec/v1.1.0-rc.1/: P4Runtime-Spec-bib.aux  P4Runtime-Spec-bib.bbl.mdk  P4Runtime-Spec-math-full.final.tex  P4Runtime-Spec-math-plain.dim  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec-math-plain.final.tex  P4Runtime-Spec.aux  P4Runtime-Spec.dimx  P4Runtime-Spec.html  P4Runtime-Spec.tex
spec/v1.2.0/: P4Runtime-Spec-bib.aux  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec.html  P4Runtime-Spec.tex
spec/v1.2.0-rc.1/: P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec-math-plain.final.tex  P4Runtime-Spec.aux  P4Runtime-Spec.dimx  P4Runtime-Spec.html  P4Runtime-Spec.tex
spec/v1.2.0-rc.2/: P4Runtime-Spec-math-full.final.tex  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec.html  P4Runtime-Spec.tex
spec/v1.3.0/: P4Runtime-Spec-math-full.final.tex  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec.aux  P4Runtime-Spec.html  P4Runtime-Spec.tex
spec/v1.4.0/: P4Runtime-Spec-bib.aux  P4Runtime-Spec-bib.bbl.mdk  P4Runtime-Spec-math-full.final.tex  P4Runtime-Spec-math-plain.aux  P4Runtime-Spec-math-plain.dim  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec-math-plain.final.tex  P4Runtime-Spec.aux  P4Runtime-Spec.dimx  P4Runtime-Spec.html  P4Runtime-Spec.tex
spec/v1.4.0-rc.2/: P4Runtime-Spec-bib.bib.json  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec-math-plain.final.tex  P4Runtime-Spec.aux  P4Runtime-Spec.html  P4Runtime-Spec.tex
spec/v1.4.0-rc.4/: P4Runtime-Spec-bib.aux  P4Runtime-Spec-math-plain.dvi
spec/v1.4.0-rc.5/: P4Runtime-Spec-bib.bbl.mdk  P4Runtime-Spec-bib.final.aux  P4Runtime-Spec-math-full.final.tex  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec-math-plain.final.tex  P4Runtime-Spec.aux  P4Runtime-Spec.html  P4Runtime-Spec.tex
spec/v1.4.1/: P4Runtime-Spec-bib.bib.json  P4Runtime-Spec-bib.final.aux  P4Runtime-Spec-math-full.final.tex  P4Runtime-Spec-math-plain.dvi  P4Runtime-Spec-math-plain.final.tex  P4Runtime-Spec.aux  P4Runtime-Spec.html  P4Runtime-Spec.tex  references.bib
spec/v1.5.0/: P4Runtime-Spec.html
tools/: asciidocint.conf.json.license  asciidoclint.py  madokolint.conf.json  madokolint.py  reuse-annotate-font-files.sh
v1/: README.md
v1/docs/: Makefile  P4Runtime-Spec.mdk  README.md
