load("@rules_license//rules:license.bzl", "license")

package(
    default_applicable_licenses = [":license"],
    default_visibility = ["//visibility:public"],
)

license(
    name = "license",
    license_kinds = ["@rules_license//licenses/spdx:Apache-2.0"],
    license_text = "LICENSE",
)

exports_files([
    "LICENSE",
    "p4runtime_deps.bzl",
])

# -- Aliases for backward compatibility --------------------------------------
# TODO(https://github.com/p4lang/p4runtime/issues/576): Remove in 2.0.

alias(
    name = "p4types_proto",
    actual = "//proto/p4/config/v1:p4types_proto",
    deprecation = "Please use @p4runtime//proto/p4/config/v1:p4types_proto instead.",
)

alias(
    name = "p4info_proto",
    actual = "//proto/p4/config/v1:p4info_proto",
    deprecation = "Please use @p4runtime//proto/p4/config/v1:p4info_proto instead.",
)

alias(
    name = "p4data_proto",
    actual = "//proto/p4/v1:p4data_proto",
    deprecation = "Please use @p4runtime//proto/p4/v1:p4data_proto instead.",
)

alias(
    name = "p4runtime_proto",
    actual = "//proto/p4/v1:p4runtime_proto",
    deprecation = "Please use @p4runtime//proto/p4/v1:p4runtime_proto instead.",
)

alias(
    name = "p4types_cc_proto",
    actual = "//proto/p4/config/v1:p4types_cc_proto",
    deprecation = "Please use @p4runtime//proto/p4/config/v1:p4types_cc_proto instead.",
)

alias(
    name = "p4info_cc_proto",
    actual = "//proto/p4/config/v1:p4info_cc_proto",
    deprecation = "Please use @p4runtime//proto/p4/config/v1:p4info_cc_proto instead.",
)

alias(
    name = "p4data_cc_proto",
    actual = "//proto/p4/v1:p4data_cc_proto",
    deprecation = "Please use @p4runtime//proto/p4/v1:p4data_cc_proto instead.",
)

alias(
    name = "p4runtime_cc_proto",
    actual = "//proto/p4/v1:p4runtime_cc_proto",
    deprecation = "Please use @p4runtime//proto/p4/v1:p4runtime_cc_proto instead.",
)

alias(
    name = "p4runtime_cc_grpc",
    actual = "//proto/p4/v1:p4runtime_cc_grpc",
    deprecation = "Please use @p4runtime//proto/p4/v1:p4runtime_cc_grpc instead.",
)

alias(
    name = "p4types_py_proto",
    actual = "//proto/p4/config/v1:p4types_py_proto",
    deprecation = "Please use @p4runtime//proto/p4/config/v1:p4types_py_proto instead.",
)

alias(
    name = "p4info_py_proto",
    actual = "//proto/p4/config/v1:p4info_py_proto",
    deprecation = "Please use @p4runtime//proto/p4/config/v1:p4info_py_proto instead.",
)

alias(
    name = "p4data_py_proto",
    actual = "//proto/p4/v1:p4data_py_proto",
    deprecation = "Please use @p4runtime//proto/p4/v1:p4data_py_proto instead.",
)

alias(
    name = "p4runtime_py_proto",
    actual = "//proto/p4/v1:p4runtime_py_proto",
    deprecation = "Please use @p4runtime//proto/p4/v1:p4runtime_py_proto instead.",
)

alias(
    name = "p4runtime_py_grpc",
    actual = "//proto/p4/v1:p4runtime_py_grpc",
    deprecation = "Please use @p4runtime//proto/p4/v1:p4runtime_py_grpc instead.",
)

alias(
    name = "p4info_go_proto",
    actual = "//proto/p4/config/v1:p4info_go_proto",
    deprecation = "Please use @p4runtime//proto/p4/config/v1:p4info_go_proto instead.",
)

alias(
    name = "p4runtime_go_proto",
    actual = "//proto/p4/v1:p4runtime_go_proto",
    deprecation = "Please use @p4runtime//proto/p4/v1:p4runtime_go_proto instead.",
)
