module(
    name = "p4runtime",
    # TODO(#582): Remove upper bound once we support Bazel 9.x.
    bazel_compatibility = [">=7.0.0", "<10.0.0"],
)

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_cc", version = "0.2.16")
bazel_dep(name = "googleapis", version = "0.0.0-20260130-c0fcb356")
bazel_dep(name = "grpc", version = "1.78.0-pre1")
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "rules_license", version = "1.0.0")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.59.0")
bazel_dep(name = "gazelle", version = "0.47.0")
bazel_dep(name = "c-ares", version = "1.34.6")
bazel_dep(name = "re2", version = "2025-11-05.bcr.1")
bazel_dep(name = "abseil-cpp", version = "20260107.0")
bazel_dep(name = "rules_foreign_cc", version = "0.15.1")
bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "googleapis-go", version = "1.0.0")
bazel_dep(name = "envoy_api", version = "0.0.0-20251216-6ef568c")

switched_rules = use_extension("@googleapis//:extensions.bzl", "switched_rules")
switched_rules.use_languages(
    cc = True,
    go = True,
    grpc = True,
    python = True,
)
use_repo(switched_rules, googleapis_imports = "com_google_googleapis_imports")

# Including this allows us to autoformat all Bazel files by running
# ```
# bazel run -- @buildifier_prebuilt//:buildifier -lint=fix -r $(bazel info workspace)
# ```
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2", dev_dependency = True)

single_version_override(
    module_name = "grpc",
    version = "1.78.0-pre1",
    patches = ["//:grpc_bazel_9.patch"],
    patch_strip = 1,
)
