# Copyright 2022 Antonin Bas
# SPDX-License-Identifier: Apache-2.0
[build-system]
requires = [
    "setuptools",
    "setuptools_scm[toml]",
    "setuptools_scm_git_archive",
    "wheel",
]
build-backend = 'setuptools.build_meta'

[tool.setuptools_scm]
root = "../"
# use current tag and not next one
version_scheme = "post-release"
