[metadata]
name = p4runtime
description = Python bindings for P4Runtime protocol
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
url = https://github.com/p4lang/p4runtime
author = P4 API Working Group
author_email = p4-api@lists.p4.org
license = Apache-2.0
license_file = LICENSE
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python
    Programming Language :: Python :: 3

[options]
packages = find:
platforms = any
python_requires = >=3.6
setup_requires =
    setuptools_scm
install_requires =
    protobuf >= 3.6.1
    grpcio >= 1.17.2
    googleapis-common-protos >= 1.52
