[package]
name = "p4runtime-prost"
version = "1.4.0"
edition = "2021"
authors = ["P4 API Working Group <p4-api@lists.p4.org>"]
description = "P4Runtime Specification - Protobuf message API (Prost)"
categories = ["network-programming"]
keywords = ["p4runtime", "protobuf"]
license = "Apache-2.0"
repository = "https://github.com/p4lang/p4runtime"

[dependencies]
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
protoc-prebuilt = "0.3" # To obtain `protoc` binary (the Protobuf compiler).
prost-build = "0.14" # To generate API for Protobuf messages.
walkdir = "2" # To find proto files.
