# Copyright 2025 Steffen Smolka
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "p4runtime-tonic"
version = "1.5.0"
edition = "2021"
authors = ["P4 API Working Group <p4-api@lists.p4.org>"]
description = "P4Runtime Specification - gRPC service definitions"
categories = ["network-programming"]
keywords = ["p4runtime", "grpc", "tonic"]
license = "Apache-2.0"
repository = "https://github.com/p4lang/p4runtime"

[dependencies]
p4runtime-prost = { path = "../p4runtime-prost" }
prost = "0.14"
prost-types = "0.14"
tonic = "0.14"
tonic-prost = "0.14"

[build-dependencies]
# To obtain `protoc` binary (the Protobuf compiler).
protoc-prebuilt = "0.3"
# To generate client/server code for grpc services.
tonic-prost-build = "0.14"
# To find proto files.
walkdir = "2"
