bazel_dep(name = "p4runtime")
bazel_dep(name = "protobuf", version = "29.1")
bazel_dep(name = "rules_cc", version = "0.2.16")

# In your own project, you will likely want to use `git_override` instead
# of `local_repository` to load p4runtime.
local_path_override(
    module_name = "p4runtime",
    path = "../../..",
)

# git_override(
#     module_name = "p4runtime",
#     strip_prefix = "p4runtime-1.4.1",
#     urls = ["https://github.com/p4lang/p4runtime/archive/v1.4.1.tar.gz"],
#     # sha256 = "<insert hash value here>",
# )
