bazel_dep(name = "p4runtime")
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "rules_cc", version = "0.2.17")

# In your own project, you will likely want to use `git_override` instead
# of `local_repository` to load p4runtime.
local_path_override(
    module_name = "p4runtime",
    path = "../../..",
)

# git_override(
#     module_name = "p4runtime",
#     strip_prefix = "p4runtime-1.5.0",
#     urls = ["https://github.com/p4lang/p4runtime/archive/v1.5.0.tar.gz"],
#     # sha256 = "<insert hash value here>",
# )
