load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@com_github_grpc_grpc//bazel:python_rules.bzl", "py_grpc_library", "py_proto_library")
load("@bazel_skylib//rules:build_test.bzl", "build_test")

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "p4data_proto",
    srcs = ["p4data.proto"],
    strip_import_prefix = "/proto",
)

proto_library(
    name = "p4runtime_proto",
    srcs = ["p4runtime.proto"],
    deps = [
        ":p4data_proto",
        "//proto/p4/config/v1:p4info_proto",
        "@com_google_googleapis//google/rpc:status_proto",
        "@com_google_protobuf//:any_proto",
    ],
    strip_import_prefix = "/proto",
)

cc_proto_library(
    name = "p4data_cc_proto",
    deps = [":p4data_proto"],
)

cc_proto_library(
    name = "p4runtime_cc_proto",
    deps = [":p4runtime_proto"],
)

py_proto_library(
    name = "p4data_py_proto",
    deps = [":p4data_proto"],
)

py_proto_library(
    name = "p4runtime_py_proto",
    deps = [":p4runtime_proto"],
)

go_proto_library(
    name = "p4runtime_go_proto",
    importpath = "github.com/p4lang/p4runtime/go/p4/v1",
    protos = [
        ":p4data_proto",
        ":p4runtime_proto",
    ],
    deps = [
        "//proto/p4/config/v1:p4info_go_proto",
        "@com_google_googleapis//google/rpc:status_go_proto",
    ],
)

cc_grpc_library(
    name = "p4runtime_cc_grpc",
    srcs = [":p4runtime_proto"],
    generate_mocks = True,
    grpc_only = True,
    deps = [":p4runtime_cc_proto"],
)

py_grpc_library(
    name = "p4runtime_py_grpc",
    srcs = [":p4runtime_proto"],
    deps = [":p4runtime_py_proto"],
)

build_test(
    name = "proto_build_test",
    targets = [
        ":p4data_proto",
        ":p4runtime_proto",
        ":p4data_cc_proto",
        ":p4runtime_cc_proto",
        ":p4data_py_proto",
        ":p4runtime_py_proto",
        ":p4runtime_go_proto",
        ":p4runtime_cc_grpc",
        ":p4runtime_py_grpc",
    ],
)
