load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@com_github_grpc_grpc//bazel:cc_grpc_library.bzl", "cc_grpc_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "p4data_proto",
    srcs = ["p4data.proto"],
    strip_import_prefix = "/proto",
)

proto_library(
    name = "p4runtime_proto",
    srcs = ["p4runtime.proto"],
    strip_import_prefix = "/proto",
    deps = [
        ":p4data_proto",
        "//proto/p4/config/v1:p4info_proto",
        "@com_google_googleapis//google/rpc:status_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

cc_proto_library(
    name = "p4data_cc_proto",
    deps = [":p4data_proto"],
)

cc_proto_library(
    name = "p4runtime_cc_proto",
    deps = [":p4runtime_proto"],
)

cc_grpc_library(
    name = "p4runtime_cc_grpc",
    srcs = [":p4runtime_proto"],
    generate_mocks = True,
    grpc_only = True,
    deps = [":p4runtime_cc_proto"],
)

build_test(
    name = "proto_build_test",
    targets = [
        ":p4data_proto",
        ":p4runtime_proto",
        ":p4data_cc_proto",
        ":p4runtime_cc_proto",
        ":p4runtime_cc_grpc",
    ],
)
