load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@grpc//bazel:python_rules.bzl", "py_proto_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "p4types_proto",
    srcs = ["p4types.proto"],
    strip_import_prefix = "/proto",
)

proto_library(
    name = "p4info_proto",
    srcs = ["p4info.proto"],
    strip_import_prefix = "/proto",
    deps = [
        ":p4types_proto",
        "@protobuf//:any_proto",
        "@protobuf//:descriptor_proto",
    ],
)

cc_proto_library(
    name = "p4types_cc_proto",
    deps = [":p4types_proto"],
)

cc_proto_library(
    name = "p4info_cc_proto",
    deps = [":p4info_proto"],
)

py_proto_library(
    name = "p4types_py_proto",
    deps = [":p4types_proto"],
)

py_proto_library(
    name = "p4info_py_proto",
    deps = [":p4info_proto"],
)

go_proto_library(
    name = "p4info_go_proto",
    importpath = "github.com/p4lang/p4runtime/go/p4/config/v1",
    protos = [
        ":p4info_proto",
        ":p4types_proto",
    ],
)

build_test(
    name = "proto_build_test",
    targets = [
        ":p4info_proto",
        ":p4types_proto",
        ":p4types_cc_proto",
        ":p4info_cc_proto",
        ":p4types_py_proto",
        ":p4info_py_proto",
        ":p4info_go_proto",
    ],
)
