load("@bazel_skylib//rules:build_test.bzl", "build_test")
load("@rules_proto//proto:defs.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
)

proto_library(
    name = "p4types_proto",
    srcs = ["p4types.proto"],
    strip_import_prefix = "/proto",
)

proto_library(
    name = "p4info_proto",
    srcs = ["p4info.proto"],
    strip_import_prefix = "/proto",
    deps = [
        ":p4types_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:descriptor_proto",
    ],
)

cc_proto_library(
    name = "p4types_cc_proto",
    deps = [":p4types_proto"],
)

cc_proto_library(
    name = "p4info_cc_proto",
    deps = [":p4info_proto"],
)

build_test(
    name = "proto_build_test",
    targets = [
        ":p4info_proto",
        ":p4types_proto",
        ":p4types_cc_proto",
        ":p4info_cc_proto",
    ],
)
